[package]
name = "iron_torch"
version = "0.1.0"
edition = "2021"
authors = ["Emil Lindgren"]
license = "MIT"
description = "A very basic neuralnet set up and user will keep updated for abit"
homepage = "https://github.com/ValpsZ/Iron-Thorch"
repository = "https://github.com/ValpsZ/Iron-Thorch"
readme = "README.md"


[lib]
name = "iron_torch"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
rand = "0.8.4"
